# packagemanager

./: CMakeLists.txt  PackageManager.sln  README  SConstruct  readme.md
demo/: demo.vcproj  main.cpp
include/: common_define.h  package_error.h  package_if.h  package_mgr.h  service_entry_if.h  util.h
src/: config.cpp  config.h  framework.vcproj  package_error.cpp  package_mgr.cpp  util.cpp
